--- a/build.xml
+++ b/build.xml
@@ -65,7 +65,7 @@
         <junit printsummary="yes" haltonerror="yes" haltonfailure="yes" fork="yes">
             <formatter type="plain" usefile="false" />
             <formatter type="xml" usefile="true" />
-            <test name="test.TestProxySuite" todir="${target.report.dir}" />
+            <test name="test.TestCacheSuite" todir="${target.report.dir}" />
             <classpath>
                 <pathelement location="${target.classes.java.dir}" />
                 <pathelement location="${target.classes.test.dir}" />
